# Commands_recognition_and_lvgl

./: sdkconfig  sdkconfig.old
components/hardware_driver/: CMakeLists.txt  Kconfig.projbuild
components/hardware_driver/boards/elecrow-esp32s3/: bsp_board.c
components/hardware_driver/boards/esp32s3-box/: bsp_board.c
components/hardware_driver/boards/include/: bsp_board.h  elecrow_esp32_s3_board.h
components/lvgl/: lv_conf.h
components/lvgl/src/hal/: lv_hal_disp.c
components/lvgl_esp32_drivers/: lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.c
main/: CMakeLists.txt  main.c
ui/: events_init.c  events_init.h  gui_guider.h  guider_fonts.h  setup_scr_screen.c
